Security & testing updates

--- a/package.json
+++ b/package.json
@@ -1,49 +1,56 @@
 {
-  "name": "goals-react-ts",
+  "name": "baseramp-project-manager",
+  "author": "William R. Lotherington,III, et. al.",
+  "email": "duke.lotherington@gmail.com",
+  "licence": "GPL3",
   "version": "0.1.0",
-  "private": true,
+  "private": false,  
   "devDependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.39",
-    "@material-ui/pickers": "^3.2.8",
-    "@reduxjs/toolkit": "^1.2.1",
-    "@testing-library/react": "^8.0.1",
-    "@testing-library/jest-dom": "5.0.2",
-    "@types/enzyme": "3.1.10",
-    "@types/enzyme-adapter-react-16": "1.0.2",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.4",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
+    "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.44",
+    "@material-ui/pickers": "^3.2.10",
+    "@reduxjs/toolkit": "^1.2.5",
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.3",
+    "@types/node": "^13.7.6",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-text-mask": "^5.4.6",
-    "core-js": "3.6.2",
-    "date-fns": "^2.8.1",
+    "core-js": "3.6.4",
+    "date-fns": "^2.10.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
+    "enzyme-to-json": "^3.4.4",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-app-polyfill": "^1.0.5",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.13.0",
     "react-number-format": "^4.3.1",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.7.4"
+    "typeface-roboto": "0.0.75",
+    "typescript": "3.8.2"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.17.1",
+    "express-flash-messages": "^0.1.1",    
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "express-static-gzip": "^2.0.5",
     "gzip-all": "^1.0.0",
     "http-errors": "~1.6.3",
@@ -53,8 +60,8 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.17.0",
-    "pug": "^2.0.4",
     "sloc": "^0.2.1"
   },
   "scripts": {
@@ -62,6 +69,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "coverage": "react-scripts test --coverage --verbose --watchAll=false  --ci --runInBand ",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
