--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "gzip-all": "^1.0.0",
+    "minimist": "^1.2.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
