--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express-static-gzip": "^2.0.5",
     "http-errors": "~1.6.3",
     "knex": "^0.20.7",
+    "minimist": "^1.2.5",
     "mssql": "^6.0.1",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
