Split out CrudButtons; update project name

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Baseramp Project Manager",
-  "name": "Baseramp Project Manager",
+  "short_name": "Baseramp Tracker",
+  "name": "Baseramp Tracker",
   "icons": [
     {
       "src": "favicon.ico",
