--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/node": "^13.11.1",
+    "@types/passport-local": "1.0.33",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
