--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
   "proxy": "http://localhost:8080",
   "devDependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/react": "^9.4.1",
@@ -38,13 +38,13 @@
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.1",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
-    "typescript": "^3.8.3",
+    "typescript": "3.9.3",
     "sloc": "^0.2.1"
   },
   "scripts": {
