--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.0",
+    "react-iframe": "^1.8.0",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "5.1.2",
