--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
-    "typescript": "3.9.3"
+    "typescript": "3.9.3",
+    "nodemailer": "^6.4.6"
   },
   "scripts": {
     "start": "node ./dist/bin/www.js",
