Tag line update; remove "Tracker" from name

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Baseramp Tracker",
-  "name": "Baseramp Tracker",
+  "short_name": "Baseramp",
+  "name": "Baseramp",
   "icons": [
     {
       "src": "favicon.ico",
