--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
+    "@mdi/js": "5.3.45",
+    "@mdi/react": "1.4.0",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/react": "^9.4.1",
     "@testing-library/jest-dom": "^5.1.1",
